--- a/src/components/views/auth/Login/login.module.scss
+++ b/src/components/views/auth/Login/login.module.scss
@@ -5,54 +5,43 @@
   flex-direction: column;
   height: 100vh;
   width: 100vw;
-  &__title {
-    font-size: 32px;
-    margin-bottom: 10px;
-    font-weight: 900;
-  }
   &__form {
     width: 35%;
     padding: 20px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
     margin-bottom: 20px;
-    &__item {
+    &__title {
+      font-size: 32px;
+      margin-bottom: 10px;
+      font-weight: 900;
+      align-items: center;
+      justify-content: center;
       display: flex;
-      flex-direction: column;
-      margin: 20px 0;
-      &__input {
-        width: 100%;
-        padding: 10px;
-        margin-top: 5px;
-        background-color: #eee;
-        border: none;
-        outline-color: #d3d3d3;
-      }
-      &__button {
-        width: 100%;
-        padding: 15px;
-        background-color: #000;
-        color: #fff;
-        border: none;
-        outline-color: #d3d3d3;
-      }
+    }
+    &__error {
+      color: red;
+      font-size: 14px;
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &__button {
+      width: 100%;
+      border-radius: 10px;
+      padding: 15px 30px;
     }
     &__divider {
       width: 100%;
       height: 1px;
-      background-color: #000;
       margin: 20px 0;
     }
     &__other {
       &__button {
         width: 100%;
-        padding: 15px;
-        background-color: #000;
-        color: #fff;
-        border: none;
-        outline-color: #d3d3d3;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        border-radius: 10px;
+        padding: 10.5px;
         gap: 5px;
         i {
           font-size: 20px;
@@ -62,17 +51,15 @@
   }
   &__text {
     a {
+      margin-left: 5px;
       text-decoration: none;
       color: #00b7ff;
     }
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 14px;
     font-weight: 700;
-  }
-  &__error {
-    color: red;
-    font-size: 14px;
-    font-weight: 700;
-    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
