--- a/src/components/views/auth/Register/register.module.scss
+++ b/src/components/views/auth/Register/register.module.scss
@@ -1,55 +1,65 @@
-.register{
+.register {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  &__form {
+    width: 35%;
+    padding: 20px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin-bottom: 20px;
+    &__title {
+      font-size: 32px;
+      margin-bottom: 10px;
+      font-weight: 900;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &__error {
+      color: red;
+      font-size: 14px;
+      font-weight: 700;
+      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &__divider {
+      width: 100%;
+      height: 1px;
+      margin: 20px 0;
+    }
+    &__button {
+      width: 100%;
+      border-radius: 10px;
+      padding: 15px 30px;
+    }
+    &__other {
+      &__button {
+        width: 100%;
+        border-radius: 10px;
+        padding: 12px;
+        gap: 5px;
+        i {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+  &__text {
+    a {
+      text-decoration: none;
+      color: #00b7ff;
+    }
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: 700;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
-    &__title{
-        font-size: 32px;
-        margin-bottom: 10px;
-        font-weight: 900;
-    }
-    &__form{
-        width: 35%;
-        padding: 20px;
-        box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-        margin-bottom: 20px;
-        &__item{
-            display: flex;
-            flex-direction: column;
-            margin: 20px 0;
-            &__input{
-                width: 100%;
-                padding: 10px;
-                margin-top: 5px;
-                background-color: #eee;
-                border: none;
-                outline-color: #d3d3d3;
-            }
-            &__button{
-                width: 100%;
-                padding: 10px;
-                background-color: #000;
-                color: #fff;
-                border: none;
-                outline-color: #d3d3d3;
-            }
-        }
-    }
-    &__text{
-        a {
-            text-decoration: none;
-            color: #00b7ff;
-        }
-        margin-top: 20px;
-        font-size: 14px;
-        font-weight: 700;
-    }
-    &__error{
-        color: red;
-        font-size: 14px;
-        font-weight: 700;
-        margin-bottom: 10px;
-    }
+  }
 }
