--- a/src/components/layouts/AuthLayout/AuthLayout.module.scss
+++ b/src/components/layouts/AuthLayout/AuthLayout.module.scss
@@ -1,4 +1,4 @@
-.register {
+.auth {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -6,7 +6,7 @@
   height: 100vh;
   width: 100vw;
   &__form {
-    width: 35%;
+    width: 40%;
     padding: 20px;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -15,43 +15,22 @@
       font-size: 32px;
       margin-bottom: 10px;
       font-weight: 900;
-      display: flex;
       align-items: center;
       justify-content: center;
+      display: flex;
     }
     &__error {
       color: red;
       font-size: 14px;
       font-weight: 700;
-      margin-bottom: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
     }
-    &__divider {
-      width: 100%;
-      height: 1px;
-      margin: 20px 0;
-    }
-    &__button {
-      width: 100%;
-      border-radius: 10px;
-      padding: 15px 30px;
-    }
-    &__other {
-      &__button {
-        width: 100%;
-        border-radius: 10px;
-        padding: 12px;
-        gap: 5px;
-        i {
-          font-size: 20px;
-        }
-      }
-    }
   }
   &__text {
     a {
+      margin-left: 5px;
       text-decoration: none;
       color: #00b7ff;
     }
