--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   font-size: 14px;
+  padding: 12px;
   cursor: pointer;
 }
 
@@ -12,16 +13,6 @@
   color: #fff;
 }
 
-.secondary {
-  background-color: #fff;
-  color: #000;
-  border: 1px solid #000;
-}
-
-.secondary:hover {
-  background-color: #000;
-  color: #fff;
-}
 
 .danger {
   background-color: #ff0000;
