--- a/src/components/views/auth/Login/Login.module.scss
+++ b/src/components/views/auth/Login/Login.module.scss
@@ -2,7 +2,6 @@
   &__button {
     width: 100%;
     border-radius: 10px;
-    padding: 15px 30px;
   }
   &__divider {
     width: 100%;
@@ -11,12 +10,19 @@
   }
   &__other {
     &__button {
+      background-color: #ffffff;
+      color: #000000;
+      outline: 1px solid #000000;
       width: 100%;
       border-radius: 10px;
-      padding: 10.5px;
       gap: 5px;
       i {
         font-size: 20px;
+      }
+      &:hover {
+        background-color: #000000;
+        color: #ffffff;
+        transition: all 0.3s ease;
       }
     }
   }
