--- a/src/components/ui/Select/Select.module.scss
+++ b/src/components/ui/Select/Select.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   margin: 20px 0;
-  &__input {
+  &__select {
     width: 100%;
     padding: 12px;
     margin-top: 5px;
